--- a/assets/css/apps/mail/MailList.css
+++ b/assets/css/apps/mail/MailList.css
@@ -6,6 +6,7 @@
    scrollbar-color: lightgrey white;
    height: 100vh;
    background-color: white;
+   text-overflow: ellipsis;
  }
 
  .mail-list ul {
