--- a/assets/css/apps/mail/MailPreview.css
+++ b/assets/css/apps/mail/MailPreview.css
@@ -1,4 +1,4 @@
- .mail-preview {
+.mail-preview {
     display: flex;
     align-items: center;
     padding: 12px;
@@ -87,6 +87,10 @@
     align-items: center;
     justify-content: space-between; 
     width: 100%;
+    flex-shrink: 1;
+    min-width: 400px;
+    text-overflow: ellipsis;
+
 }
 
 .mail-preview .mail-text-wrapper {
@@ -94,6 +98,7 @@
     align-items: center;
     justify-content: space-between; 
     flex-grow: 1;
+    min-width: 100px;
 }
 
 .mail-preview .mail-text {
